# AIVO

./: .gitignore  AGENTS.md  AIVO.code-workspace  CHANGELOG.md  CONSTITUTION.md  Dockerfile  LICENSE  README.md  SECURITY.md  configure.bat  conftest.py  index.html  package-lock.json  package.json  pytest.ini  setup.bat  vite.config.ts  vitest.config.ts
sentinel/: README.md  __init__.py  presentation.py  pyproject.toml
sentinel/advisory/: __init__.py  confidence.py  config.py  models.py  rules.py  service.py
sentinel/conversation/: __init__.py  contracts.py  core.py  runtime.py
sentinel/core/: __init__.py  agent.py  ai_workflows.py  alerting.py  application_knowledge.py  automation_engine.py  capability_matrix.py  capability_registry.py  circuit_breaker.py  confirmation.py  content_security.py  context.py  context_window.py  cost_tracker.py  decision_engine.py  deep_context.py  developer_mode.py  environment_learning.py  environment_snapshot.py  event_bus.py  event_registry.py  event_store.py  event_types.py  events.py  file_pipeline.py  gaming_mode.py  goals.py  gpu_manager.py  grounding.py  grounding_cache.py  hardening.py  hardware_intelligence.py  identity.py  integrations.py  intent.py  knowledge_base.py  memory.py  model_feedback.py  model_router.py  multi_agent.py  (+32 more)
sentinel/docs/: LONG_TERM_MEMORY.md  MASTER_TRANSFORMATION_PLAN.md  PRODUCT_IDENTITY.md  SENTINEL_TRUST_LAYER_MIGRATION_v1.0.md  architectural_maturity_report.md  architectural_reasoning_report.md  fase-0-cierre.md  fase-1-cierre.md  fase-2-cierre.md  fase-3-cierre.md  fase-4-cierre.md  fase-5-cierre.md  fase-6-cierre.md  fase-7-cierre.md  fase-8-security-analysis.md  identidad.md
sentinel/policies/: loader.py  output_policies.py  schema.py  (+2 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  updater.key  updater.key.pub
(+374 files in other folders)
