[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "1.0.0"
description = "Sentinel - AI OS control trust layer"
requires-python = ">=3.12"

[project.scripts]
sentinel-install = "sidecar.installer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*", "sidecar*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "S"]
ignore = [
    "E402",
    "E501",
    "F401",
    "S101",
    "S104",
    "S603",
    "S607",
    "S608",
    "S310",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E712"]
"__init__.py" = ["F401"]
