[package]
name = "aivo"
version = "0.1.0"
edition = "2021"
description = "AIVO - AI-powered PC Control Panel"

[lib]
name = "aivo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
