[package]
name = "sentinel"
version = "1.0.0"
edition = "2021"
description = "Sentinel - AI OS control trust layer"

[lib]
name = "sentinel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "macros"] }
